$Id: CHANGES,v 6.6 2004/06/19 10:31:57 tom Exp $
------------------------------------------------------------------------------

19 Jun 2004
	+ change copyright to BSD-style.
	+ minor cleanup (indent, ANSI C) to add-on files.
	+ modify run_test.sh to ensure that Cygwin will recognize a generated
	  script as such (report by Igor Pechtchanski).
	+ modify path of run_test.sh script in "make check" to allow this to
	  be run outside the source directory (report by Igor Pechtchanski).
	+ use $(DESTDIR) in makefile.in, for packaging (patch by Igor
	  Pechtchanski).

27 Mar 2004,	updated configure script, use AC_OBJEXT, AC_EXEEXT.
		Fixes to build/work with OS/2 EMX.
29 Dec 2002,	indent'd, updated configure script.  Add -V option.
28 Jul 1999,	port to win32.  drop K&R compatibility.

6.0 posted to comp.sources.misc
---

18 Mar 1995,	added -p, -I, -L options.  Made -t option work properly on UNIX.
11 Mar 1995,	use 'txtalloc()' to reduce calls on 'strcmp()', making this
		faster.
07 Mar 1995,	absorbed -a, -l options into -v to simplify use for library
		scanning.
28 Nov 1993,	adaptation to MS-DOS.
22 Sep 1993,	gcc-warnings, memory leaks.
17 Jul 1992,	corrected error parsing pathlist.
22 Oct 1991,	converted to ANSI
21 May 1991,	added "-a" option, making default more compact by
		suppressing directories which contain no conflicts
07 Dec 1989,	recoded so that we aren't constrained by the number
		of bits in a long to record information.  A side-
		effect of this is that we can show instances of
		files linked (with the same name) to the first
		instance found.
07 Dec 1989,	added "-w" option, enhanced usage-message.
		Corrected bug which caused wrong behavior when
		options were given w/o names of files-to-find.
25 Jul 1989,	moved the code which lists the pathnames down past
		the point at which we have eliminated redundant
		paths, to avoid a confusing display.
25 Jan 1989,	corrected array-index variable
11 Aug 1988,	port to apollo sys5 environment