@@ -1,4 +1,4 @@
-MANIFEST for conflict, version t20040619
+MANIFEST for conflict, version t20040620
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 CHANGES                         change-log for 'conflict'
