@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: run_test.sh,v 6.1 2004/06/19 10:22:26 tom Exp $
+# $Id: run_test.sh,v 6.3 2004/06/20 23:13:23 tom Exp $
 # Run a test to show that CONFLICT is working
 BIN=`pwd`
 PROG=$BIN/conflict
@@ -24,14 +24,39 @@ cat <<eof/
 **	This repeats the last test, with pathnames-only
 eof/
 $PROG -p -r -t.c.o. conflict
+
+# make a temporary directory
+DIR=`mktemp -d ${TMPDIR-/tmp}/conflict.XXXXXX 2>/dev/null`
+if test -z "$DIR" ; then
+	DIR=/tmp/conflict.$$
+	mkdir $DIR 	
+fi
+trap "cd /;rm -rf $DIR" 0 1 2 5 15
+cd $DIR || exit 1
+
 cat <<eof/
 **
-**	Add a dummy executable in the temp-directory, producing a conflict:
+**	Add a dummy executable in the current directory
+**		$DIR
+**
+**	producing a conflict with the executable
+**		$PROG
+**
+**	For Unix, the conflict will be in the empty suffix (first column
+**	of the report).  For Win32 it will be in the combination of empty
+**	and "e" (.exe) suffixes.
 eof/
-cd /tmp
-rm -f conflict
-echo "#!$SHELL" >conflict
-echo test >>conflict
-chmod 755 conflict
-$PROG
-rm -f conflict
+
+# try to test conflicts on case-insensitive systems
+TEST=conflict
+rm -f $TEST
+touch $TEST
+if test -f Conflict ; then
+	TEST=Conflict
+	rm -f $TEST
+fi
+
+echo "#!${SHELL-/bin/sh}" >$TEST
+echo echo hello >>$TEST
+chmod 755 $TEST
+$PROG -t..exe
